--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.CSS">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Savoir</title>
   </head>
@@ -14,7 +14,7 @@
           <a class="insta-link" href="https://www.instagram.com/savoir.course/"><span class="iconify insta-icon" data-icon="akar-icons:instagram-fill" style="color: #8c43c5;"></span></a>
     </div>
     <div class="triangle"></div>
-    <img class="image" src="images\CroodsKeepinginTouch.png">
+    <img class="image" src="CroodsKeepinginTouch.png">
 
 
 
