--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>We are coming soon!</h1>
       <h3>Our site is under contrusction, you can connect with
           us from link given below.</h3>
-          <a class="insta-link" href="https://www.instagram.com/savoir.course/"><span class="iconify insta-icon" data-icon="akar-icons:instagram-fill" style="color: #8c43c5;"></span></a>
+          <a class="insta-link" href="https://www.instagram.com/savoir.course/"><span class="iconify insta-icon" data-icon="ant-design:instagram-outlined" style="color: #008ab3;"></span></a>
     </div>
     <div class="triangle"></div>
     <img class="image" src="CroodsKeepinginTouch.png">
